# obj2brz

./: BUILD.md  Cargo.toml  README.md  build.sh  clippy.toml  rustfmt.toml
.cargo/: config.toml
crates/obj2brz/: Cargo.toml
crates/obj2brz-cli/: Cargo.toml
crates/obj2brz-cli/src/: main.rs
crates/obj2brz-gui/: Cargo.toml
crates/obj2brz-gui/src/: gui.rs  icon.rs  main.rs
crates/obj2brz/src/: brdb_support.rs  convert.rs  error.rs  fbx.rs  gltf_support.rs  ldraw.rs  lib.rs  logger.rs  octree.rs  palette.rs  rampify.rs  simplify.rs  stl.rs  voxelize.rs
src/: brdb_support.rs  color.rs  gui.rs  main.rs  simplify.rs
