[workspace]
resolver = "2"
members = ["crates/obj2brz", "crates/obj2brz-cli", "crates/obj2brz-gui"]

[workspace.package]
version = "0.2.0"
authors = ["Kmschr <Kmschr@gmail.com>"]
edition = "2021"

[workspace.dependencies]
# Actively developed BRDB writer, tracked from upstream.
brdb = { git = "https://github.com/brickadia-community/brdb" }
cgmath = "0.18"
image = "0.24"
uuid = "1.0"
serde = { version = "1.0", features = ["derive"] }
obj2brz = { path = "crates/obj2brz" }
