[package]
name = "obj2brz-gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "OBJ to Brickadia converter (desktop GUI)"

[dependencies]
obj2brz.workspace = true
eframe = { version = "0.33", features = ["persistence"] }
rfd = "0.17"
serde.workspace = true
uuid.workspace = true
dirs = "6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Enables the entropy backend selected in .cargo/config.toml for eframe's ahash
# dependency when building for browsers.
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement"] }
