[package]
name = "obj2brz"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Convert OBJ models into Brickadia prefabs (core library)"

[dependencies]
tobj = "4.0"
brdb.workspace = true
cgmath.workspace = true
image = "0.24"
uuid.workspace = true
thiserror = "2.0"
serde.workspace = true

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4.1", features = ["windows-win"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Filesystem-less brdb path for the BRZ writer in browser builds.
brdb = { workspace = true, features = ["wasm"] }
# Enables the entropy backend selected in .cargo/config.toml for tobj's ahash
# dependency when building for browsers.
getrandom = { version = "0.3", features = ["wasm_js"] }
